# docs/swagger.yaml
@@ -1,14 +1,31 @@
 basePath: /
 definitions:
+  model.LoginRequest:
+    properties:
+      email:
+        example: email@example.com
+        type: string
+      password:
+        example: Password12345!
+        maxLength: 50
+        minLength: 8
+        type: string
+    required:
+    - email
+    - password
+    type: object
   model.UserRequest:
     properties:
       email:
+        example: email@example.com
         type: string
       password:
+        example: Password12345!
         maxLength: 50
         minLength: 8
         type: string
       username:
+        example: username
         maxLength: 50
         minLength: 3
         type: string
@@ -26,6 +43,36 @@ info:
   title: Blog API
   version: "1.0"
 paths:
+  /auth/login:
+    post:
+      consumes:
+      - application/json
+      description: Login
+      parameters:
+      - description: User data
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/model.LoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Token
+          schema:
+            type: string
+        "400":
+          description: Bad request
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      summary: Login
+      tags:
+      - auth
   /auth/register:
     post:
       consumes:
