# internal/app/api/handler/handler.go
@@ -6,12 +6,12 @@ import (
 	"net/http"
 
 	"github.com/go-playground/validator"
+	"github.com/markraiter/simple-blog/config"
 	httpSwagger "github.com/swaggo/http-swagger"
 )
 
 type AuthService interface {
-	UserSaver
-	UserProvider
+	Auth
 }
 
 type Handler struct {
@@ -22,11 +22,11 @@ type Handler struct {
 func New(log *slog.Logger, validate *validator.Validate, auth AuthService) *Handler {
 	return &Handler{
 		Healthcheck{log: log},
-		AuthHandler{log: log, validate: validate, saver: auth, provider: auth},
+		AuthHandler{log: log, validate: validate, service: auth},
 	}
 }
 
-func (h *Handler) Router(ctx context.Context) http.Handler {
+func (h *Handler) Router(ctx context.Context, cfg config.Config) http.Handler {
 	m := http.NewServeMux()
 
 	m.Handle("/swagger/", httpSwagger.Handler(
@@ -35,6 +35,7 @@ func (h *Handler) Router(ctx context.Context) http.Handler {
 
 	m.Handle("GET /health", h.APIHealth())
 	m.Handle("POST /auth/register", h.RegisterUser(ctx))
+	m.Handle("POST /auth/login", h.Login(ctx, cfg.Auth))
 
 	return m
 }
