# internal/model/error.go
@@ -6,8 +6,13 @@ import (
 )
 
 var (
-	ErrUserAlreadyExists = errors.New("user already exists")
-	ErrUserNotFound      = errors.New("user not found")
+	ErrUserAlreadyExists     = errors.New("user already exists")
+	ErrUserNotFound          = errors.New("user not found")
+	ErrInvalidCredentials    = errors.New("invalid email or password")
+	ErrNotFoundInTokenClaims = errors.New("not found in token claims")
+	ErrInvalidToken          = errors.New("invalid token")
+	ErrInvalidSigningMethod  = errors.New("invalid signing method")
+	ErrTypeAssert            = errors.New("type assert error")
 )
 
 func Err(err error) slog.Attr {
